src/main/java/com/example/auth/global/error/exception/GlobalException.java
package com.example.auth.global.error.exception;

public class GlobalException {
}
